<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/developerFragment_wifiSearch_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/developerFragment_button_width"
            android:height="@dimen/developerFragment_button_height"
            android:text="@string/developerFragment_wifi_button" />

        <Button
            android:id="@+id/developerFragment_bluetoothSearch_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:width="@dimen/developerFragment_button_width"
            android:height="@dimen/developerFragment_button_height"
            android:text="@string/developerFragment_bluetooth_button" />

        <Button
            android:id="@+id/developerFragment_commandSend_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:width="@dimen/developerFragment_button_width"
            android:height="@dimen/developerFragment_button_height"
            android:text="@string/developerFragment_commandSend_button" />

    </LinearLayout>

    <TextView
        android:id="@+id/developerFragment_pageTitle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/developerFragment_screen_tile"
        android:textSize="@dimen/developerFragment_title_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/developerFragment_back_imageButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>